# creature-forge

./: .gdlintrc  .gitattributes  .gitignore  Makefile  README.md  STATUS.md  conventions.py  make.ps1  package-lock.json  package.json  pyproject.toml  tasks.py
.github/workflows/: deploy-dashboard.yml  deploy.yml
archetypes/: arachnid.py  quadruped.py  skeleton.py
config/: pipeline.toml
dashboard/: README.md  index.html  package-lock.json  package.json  sync.mjs
dashboard/src/: App.tsx  index.css  model-viewer.d.ts  types.ts
docs/: ARCHITECTURE.md  HARDWARE.md  IMPROVED_PIPELINE.md  LICENSES.md  LIMITATIONS.md
godot/: README.md  demo_runtime.gd  enemy_controller.gd  enemy_factory.gd  enemy_post_import.gd
orchestrator/: cli.py  pipeline.py
pipeline/: README.md  build.py  generate_creature.py  glb.py  registry.py  run_khronos_validator.mjs  solver.py  stage1_spec.py  validate_asset.py
pipeline/assets/: spider_alien.asset_spec.json  spider_alien.godot_setup.json
pipeline/gpu/: availability.py  blender_bake.py  stage2_concept.py  stage3_trellis.py  stage4_finish.py  stage5_fit.py
schemas/: asset_spec.schema.json  godot_setup.schema.json
schemas/examples/: asset_spec.example.json  godot_setup.example.json
scripts/: preflight.py
tests/: fixture.py  test_build.py  test_gpu_fallback.py  test_orchestrator.py  test_quadruped.py  test_validator.py
validation/: contact_sheet.py  khronos.mjs  schema_check.py  validator.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/: spider_alien.glb
(+24 files in other folders)
