[project]
name = "creature-forge"
version = "0.1.0"
description = "Deterministic, validation-gated pipeline: prompt -> rigged, animated, Godot-ready GLB enemy."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26,<3",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
# CPU-only extras used by Stage 6 QA render and tests. No GPU here.
qa = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "matplotlib>=3.8"]
# GPU stages (Milestone 4) — installed only on the AMD/ROCm target box.
# torch comes from the gfx1151 index (see docs/HARDWARE.md), NOT from PyPI.
gpu = ["diffusers>=0.30", "transformers>=4.44", "trimesh>=4.4"]

[project.scripts]
pipeline = "orchestrator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["conventions"]
packages = ["pipeline", "orchestrator", "archetypes", "validation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
